# tensorrt-insight

./: AI推理芯片分析.md  README.md  ai_model_benchmark.md  asp.md  calibration.md  faqs.md  int4.md  overview.md
asp/: fp8_train.py  readme.md
asp/sparsity/: asp.py  permutation_lib.py  sparse_masklib.py
calibration/: calib_pth.md  conv+bn在ptq时分析.md  dynamic_shape_ptq.md  readme.md  trt_int8.md
compute_graph_optimize/: gemm_h2l.py  h2l.py  readme.md  test_matmul.py
cuda/: 1-pinned_mem.md  2-cudagraph.md  2-graph.md  3-stream.md  4-timeslice.md  6-block.md  9-setuptools_compile_cuda.md  cudagraph.md  readme.md  setuptools编译自定义cuda算子.md
deploy/: batch_run.sh  from_plan.md  make_inputs.md  nozero2fixedshape.md  onnx-ort.md  readme.md  部署业务需求.md
deploy/mutli-threads/: readme.md
developer_guide/: README.md
developer_guide/1.简介/: 1.简介.md
developer_guide/10.TensorRT中的循环/: TensorRT中的循环.md
developer_guide/11.TensorRT之条件控制/: TensorRT之条件控制.md
developer_guide/12.TensorRT和DLA(Deep_Learning_Accelerator)/: TensorRT和DLA(Deep_Learning_Accelerator).md
developer_guide/13.TensorRT的最佳性能实践/: TensorRT的最佳性能实践.md
developer_guide/14.TensorRT中的常见问题/: TensorRT中的常见问题.md
developer_guide/15.TensorRT网络层/: TensorRT网络层.md
developer_guide/17.TensorRT的命令行程序/: TensorRT的命令行程序.md
developer_guide/2.TensorRT的功能/: TensorRT的功能.md
developer_guide/3.TensorRT的C++接口解析/: TensorRT的C++接口解析.md
developer_guide/4.TensorRT的Python接口解析/: TensorRT的Python接口解析.md
developer_guide/5.TensorRT如何工作/: TensorRT如何工作.md
developer_guide/6.TensorRT高级用法/: TensorRT高级用法.md
developer_guide/8.TensorRT中的动态形状/: TensorRT中的动态形状.md
developer_guide/9.TensorRT中的自定义层/: TensorRT中的自定义层.md
developer_guide/A1.TensorRT的数据格式定义/: TensorRT的数据格式定义.md
developer_guide/A2.TensorRT的命令行程序/: TensorRT的命令行程序.md
device-benchmark-mps/: .clang-format  .gitignore  AddCustomTask.md  CMakeLists.txt  add_client_server.diff  add_mps_support.diff  pre-commit  read_bylix.md  readme.md  trt_bench.cpp
device-benchmark-mps/mps/: mps_client.cpp  mps_server.cpp  mps_utils.h  sharedCtx.h  zmq_u.cpp  zmq_u.hpp
device-benchmark-mps/src/: Task.cpp  Task.h  commandLine.cpp  commandLine.h  delayKernel.cu  delayKernel.h  tools.cpp  tools.h
device-benchmark-mps/src/customtasks/: customTask.cpp  customTask.h
device-benchmark-mps/src/customtasks/cudaKernelTask/: cudaKernelTask.cpp  cudaKernelTask.cu  cudaKernelTask.h
doc/: calibration.md  int4.md  layout.md  llm.md  multi-thread.md  nvt.md  overview.md  plugin.md
dynamic/: CMakeLists.txt  dynamic_batch_use_cudagraph.cpp  readme.md
dynamic/src/: logging.h
dynamic_shape/: readme.md
dynamic_shape/src/: CMakeLists.txt
graph-optimize/: readme.md
incubator/: readme.md
inferflow/: readme.md  timeslice.md  多模型并行加速.md  设计.md
inferflow/src/: infer.cpp  infer.h  run_trtexec8510.sh
layout/: readme.md
orin/: Toolchain-V5L.cmake  readme.md
orin/TensorRT_Sample_trtexec/: CMakeLists.txt
plugin/: README.md  int8-qdq.cpp  readme.md  svt.md
plugin/bertQKVToContextPlugin/: README_CN.md  export.py
plugin/detr3d/decoder/: cross_attention.md  export_tf.bk.py  export_tf_v2.py  para.md
plugin/detr3d/decoder/feature_sampling/: feature_sampling.py  feature_sampling_GT.py  feature_sampling_c12.py  feature_sampling_nc6.py  gt.py  utils.py  utilsV2.py
plugin/ffn/: readme.md
plugin/ln/: readme.md
plugin/multiScaleDeformableAttn/: readme.md
plugin/nonzero/: v1.cu  v2.cu  v3.cu
plugin/nonzero/nv/: nonZeroKernel.cu  readme.md
plugin/sca/: msda.py  nonzero.cu  nonzero.h  queries_to_slots.cu  queries_to_slots.h  rebatch.cu  rebatch.h  tensor_warper.py  test_nonzero.cpp  test_queries_to_slots.cpp  test_rebatch.cpp  test_sca.cpp  test_sca.py  test_sca_v2.py  test_sca_v3.py
plugin/scatter/: readme.md  test.py  test_scatterNd.py  v1.cu  v2.cu
plugin/skipLayerNormPlugin/: README.md
plugin/softmax/: readme.md
plugin/svt/: readme.md  svt.md
ptq/: auto_build_strach.md  autotune.md  autotune_build.md  calib_pth.md  conv+bn在ptq时分析.md  modpt-opt-moq.md  readme.md  resume_from_state.md  sensitivity_analysis.md  trt_int8.md  trt_int8_exp.md  vit_int8.md
ptq/trtv8-quant/: ptq.py  readme.md  sensitivity_analyse.py  utils.py
py-tensorrt/: __init__.py  readme.md
qad/: readme.md
qat/: AMMO.md  readme.md  torch_softmax_qat.md
qat/torch_ao/: qat_train.md  readme.md  torch.md
runtime/: readme.md
thor-u/: readme.md
tool/: auto-run-cuda.sh  auto-run-trt.sh  build.py  build_from_onnx.py  collecting_env.py  compare.py  compare_trt_json.py  export_onnx_gs.py  export_onnx_torchvision.py  fp6_to_fp32.py  get_onnx_io_desc.py  infer_from_engine.md  infer_from_engine.py  infer_from_engine_v10x.py  list_plugins.py  np2bin.py  onnx_check.py  onnx_edit.py  onnx_op_stats.py  qat2ptq.py  readme.md  rename.py  tensor_print_helper.py  trt-lite.md  trt_batch_onnx_build.sh  trt_out2np.py  trtexec_loop_infer.sh
tool/benchmark/: Makefile  main.cpp  readme.md  tool.h
tool/plugins/: README.md
tool/plugins/CustomIPluginV2/: CustomPlugin.cpp  CustomPlugin.h  README.md
tool/plugins/CustomIPluginV2_8.x/: readme.md  stub_plugin.cpp  stub_plugin.h
tool/prof/: draw.py  draw_multi_plots.py  perf.sh  readme.md
tool/逆向/: readme.md
trtexec/: build_log.md  identity.onnx  identity_export.py  readme.md  trex.md  引擎可视化.md
trtexec/TensorRT_Sample_trtexec/: readme.md
trtexec/one_input_is_int8/: build.sh  index_rebatch_plugin.cpp  index_rebatch_plugin.h  readme.md  sca.py
trtexec/oss/: readme.md
